<?xml version="1.0"?>
<package>
  <name>carl_demos</name>
  <version>0.0.2</version>
  <description>Demo Applications for CARL</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <author email="davidkent@wpi.edu">David Kent</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_demos</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/carl_demos/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/carl_demos</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>carl_safety</run_depend>
  <run_depend>interactive_marker_proxy</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
</package>
